Set layout boundaries for a solid layout. Set stuff to stay in center when resizing. Rework infoPane resizing with preferences and roaddata

--- a/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/roadwatch.fxml
+++ b/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/roadwatch.fxml
@@ -10,42 +10,46 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.shape.Line?>
 
-<GridPane fx:id="root" hgap="10.0" maxHeight="1080.0" maxWidth="1920.0" minHeight="0.0" minWidth="0.0" prefHeight="1080.0" prefWidth="1920.0" styleClass="background" stylesheets="@stylesheet.css" vgap="10.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fi.tuni.roadwatch.RoadWatchController">
-   <children>
-      <Label styleClass="basicText" text="X Traffic messages" GridPane.columnIndex="2" />
-      <Line endX="954.5" startX="-386.0" stroke="#78c2e2" styleClass="backgroundBlue" GridPane.columnSpan="3" GridPane.rowIndex="1" />
-      <Label fx:id="siteLabel" styleClass="bigHeading" text="HOME" GridPane.rowIndex="2" />
-      <Label fx:id="logo" maxWidth="240.0" prefHeight="40.0" prefWidth="240.0" styleClass="logo" />
-      <BorderPane fx:id="mapPane" maxHeight="620.0" maxWidth="440.0" minHeight="501.0" minWidth="440.0" prefHeight="501.0" prefWidth="440.0" style="-fx-border-color: blue; -fx-border-width: 5;" GridPane.rowIndex="3" />
-      <BorderPane fx:id="infoPane" maxHeight="620.0" maxWidth="897.0" minHeight="0" minWidth="0" prefHeight="604.0" prefWidth="897.0" style="-fx-border-color: orange; -fx-border-width: 5;" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="3" />
-      <ButtonBar fx:id="buttonBar" buttonMinWidth="0.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="58.0" prefWidth="590.0" GridPane.columnIndex="1">
-         <buttons>
-            <Button fx:id="homeButton" minHeight="-Infinity" minWidth="26.0" mnemonicParsing="false" onAction="#loadHome" prefHeight="25.0" styleClass="homeIcon" translateX="-50.0" ButtonBar.buttonData="LEFT" />
-            <Button fx:id="weatherButton" mnemonicParsing="false" onAction="#loadWeather" prefHeight="51.0" styleClass="weatherIcon" translateX="-40.0" ButtonBar.buttonData="LEFT" />
-            <Button fx:id="combineButton" mnemonicParsing="false" onAction="#loadQuickView" prefHeight="97.0" prefWidth="190.0" styleClass="combineIcon" translateX="-30.0" ButtonBar.buttonData="LEFT" />
-            <Button fx:id="preferencesButton" mnemonicParsing="false" onAction="#loadPreferences" styleClass="preferencesIcon" translateX="-20.0" ButtonBar.buttonData="LEFT" />
-            <Button fx:id="roadDataButton" mnemonicParsing="false" onAction="#loadRoadData" prefHeight="51.0" prefWidth="97.0" styleClass="roadDataIcon" ButtonBar.buttonData="LEFT" />
-         </buttons>
+<BorderPane xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fi.tuni.roadwatch.RoadWatchController">
+   <center>
+      <GridPane fx:id="root" alignment="CENTER" hgap="10.0" minHeight="850.0" minWidth="1500.0" prefHeight="850.0" prefWidth="1500.0" styleClass="background" stylesheets="@stylesheet.css" vgap="10.0" BorderPane.alignment="CENTER">
+         <children>
+            <Line endX="1089.5" startX="-386.0" stroke="#78c2e2" strokeWidth="3.0" styleClass="backgroundBlue" GridPane.columnSpan="3" GridPane.rowIndex="1" />
+            <Label fx:id="siteLabel" styleClass="bigHeading" text="HOME" GridPane.rowIndex="2" />
+            <Label fx:id="logo" maxHeight="93.0" maxWidth="371.0" prefHeight="93.0" prefWidth="250.0" styleClass="logo" />
+            <BorderPane fx:id="mapPane" maxHeight="620.0" maxWidth="440.0" minHeight="620.0" minWidth="500.0" prefHeight="501.0" prefWidth="440.0" style="-fx-border-color: blue; -fx-border-width: 5;" GridPane.rowIndex="3" />
+            <BorderPane fx:id="infoPane" minHeight="620.0" minWidth="950.0" prefHeight="620.0" prefWidth="1108.0" style="-fx-border-color: orange; -fx-border-width: 5;" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="3" />
+            <ButtonBar fx:id="buttonBar" buttonMinWidth="0.0" maxHeight="70.0" maxWidth="504.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="70.0" prefWidth="504.0" GridPane.columnIndex="1">
+               <buttons>
+                  <Button fx:id="homeButton" minHeight="-Infinity" minWidth="26.0" mnemonicParsing="false" onAction="#loadHome" prefHeight="25.0" styleClass="homeIcon" translateX="-50.0" ButtonBar.buttonData="LEFT" />
+                  <Button fx:id="weatherButton" mnemonicParsing="false" onAction="#loadWeather" prefHeight="51.0" styleClass="weatherIcon" translateX="-40.0" ButtonBar.buttonData="LEFT" />
+                  <Button fx:id="combineButton" mnemonicParsing="false" onAction="#loadQuickView" prefHeight="97.0" prefWidth="190.0" styleClass="combineIcon" translateX="-30.0" ButtonBar.buttonData="LEFT" />
+                  <Button fx:id="preferencesButton" mnemonicParsing="false" onAction="#loadPreferences" styleClass="preferencesIcon" translateX="-20.0" ButtonBar.buttonData="LEFT" />
+                  <Button fx:id="roadDataButton" mnemonicParsing="false" onAction="#loadRoadData" prefHeight="51.0" prefWidth="97.0" styleClass="roadDataIcon" ButtonBar.buttonData="LEFT" />
+               </buttons>
+               <opaqueInsets>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </opaqueInsets>
+            </ButtonBar>
+            <Label alignment="CENTER_RIGHT" contentDisplay="TOP" maxHeight="35.0" maxWidth="452.0" prefHeight="35.0" prefWidth="452.0" styleClass="basicText" text="X Traffic messages" textAlignment="RIGHT" GridPane.columnIndex="2" />
+         </children>
          <opaqueInsets>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
          </opaqueInsets>
-      </ButtonBar>
-   </children>
-   <opaqueInsets>
-      <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-   </opaqueInsets>
-   <padding>
-      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-   </padding>
-   <columnConstraints>
-      <ColumnConstraints maxWidth="1252.0" minWidth="406.0" prefWidth="437.0" />
-      <ColumnConstraints maxWidth="874.0" minWidth="10.0" prefWidth="802.0" />
-      <ColumnConstraints maxWidth="218.0" minWidth="10.0" prefWidth="218.0" />
-   </columnConstraints>
-   <rowConstraints>
-      <RowConstraints maxHeight="69.0" minHeight="10.0" prefHeight="66.0" />
-      <RowConstraints maxHeight="385.0" minHeight="0.0" prefHeight="15.0" />
-      <RowConstraints maxHeight="385.0" minHeight="0.0" prefHeight="71.0" />
-      <RowConstraints maxHeight="561.0" minHeight="497.0" prefHeight="515.0" />
-   </rowConstraints>
-</GridPane>
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
+         <columnConstraints>
+            <ColumnConstraints halignment="LEFT" />
+            <ColumnConstraints halignment="CENTER" />
+            <ColumnConstraints halignment="CENTER" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints valignment="CENTER" />
+            <RowConstraints maxHeight="385.0" minHeight="0.0" prefHeight="15.0" valignment="CENTER" />
+            <RowConstraints maxHeight="385.0" minHeight="0.0" prefHeight="71.0" valignment="CENTER" />
+            <RowConstraints valignment="CENTER" />
+         </rowConstraints>
+      </GridPane>
+   </center>
+</BorderPane>
