--- a/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/weather.fxml
+++ b/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/weather.fxml
@@ -1,16 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.String?>
-<?import javafx.collections.FXCollections?>
-<?import javafx.scene.chart.CategoryAxis?>
-<?import javafx.scene.chart.LineChart?>
-<?import javafx.scene.chart.NumberAxis?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import java.lang.*?>
+<?import javafx.collections.*?>
+<?import javafx.scene.chart.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="620.0" prefWidth="840.0" styleClass="background" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fi.tuni.roadwatch.WeatherController">
+<AnchorPane prefHeight="620.0" prefWidth="840.0" styleClass="background" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fi.tuni.roadwatch.WeatherController">
    <children>
       <Label layoutX="35.0" layoutY="38.0" styleClass="basicTextWhite" text="Choose datatype" />
       <ComboBox fx:id="comboBox" layoutX="289.0" layoutY="38.0" onAction="#changeDatatype" prefHeight="35.0" prefWidth="150.0" styleClass="combo-box">
@@ -34,6 +30,9 @@
            <Label fx:id="dATomorrowLabel" layoutX="420.0" layoutY="74.0" onMouseClicked="#onDATomorrowClick" prefHeight="47.0" prefWidth="381.0" styleClass="basicHeading" text="DAY AFTER TOMORROW" />
            <Button fx:id="avgTempButton" layoutX="98.0" layoutY="397.0" mnemonicParsing="false" onAction="#onAvgBtnClick" styleClass="basicButton" text="AVERAGE TEMP" />
            <Button fx:id="minMaxTempButton" layoutX="521.0" layoutY="400.0" mnemonicParsing="false" onAction="#onMinMaxBtnClick" styleClass="basicButton" text="MIN-MAX TEMP" />
+            <Label fx:id="tempMinLabel" layoutX="51.0" layoutY="137.0" prefHeight="35.0" prefWidth="103.0" text="Temperature min" />
+            <Label fx:id="tempMaxLabel" layoutX="51.0" layoutY="223.0" prefHeight="47.0" prefWidth="90.0" text="Temperature max" />
+            <Label fx:id="tempRightNowLabel" layoutX="51.0" layoutY="189.0" prefHeight="35.0" prefWidth="103.0" text="temprightnow" />
        </AnchorPane>
        <AnchorPane fx:id="windPane" layoutX="3.0" layoutY="62.0" prefHeight="450.0" prefWidth="823.0">
            <Label fx:id="windLabel" layoutX="43.0" layoutY="493.0" prefHeight="58.0" prefWidth="138.0" styleClass="valueText" />
@@ -56,6 +55,7 @@
                     <NumberAxis side="LEFT" />
                 </yAxis>
             </LineChart>
+
        </AnchorPane>
    </children>
 </AnchorPane>
