--- a/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/weather.fxml
+++ b/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/weather.fxml
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.collections.*?>
-<?import javafx.scene.chart.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import java.lang.String?>
+<?import javafx.collections.FXCollections?>
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.LineChart?>
+<?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
 
-<AnchorPane prefHeight="620.0" prefWidth="840.0" styleClass="background" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fi.tuni.roadwatch.WeatherController">
+<AnchorPane prefHeight="620.0" prefWidth="840.0" styleClass="background" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fi.tuni.roadwatch.WeatherController">
    <children>
       <Label layoutX="35.0" layoutY="38.0" styleClass="basicTextWhite" text="Choose datatype" />
       <ComboBox fx:id="comboBox" layoutX="289.0" layoutY="38.0" onAction="#changeDatatype" prefHeight="35.0" prefWidth="150.0" styleClass="combo-box">
@@ -18,25 +24,32 @@
            </FXCollections>
        </items>
       </ComboBox>
-       <Button fx:id="getweatherdatabutton" layoutX="317.0" layoutY="537.0" mnemonicParsing="false" onAction="#calculateData" prefHeight="58.0" prefWidth="221.0" styleClass="basicButton" text="GetWeatherData" />
+       <Button fx:id="getweatherdatabutton" layoutX="584.0" layoutY="14.0" mnemonicParsing="false" onAction="#calculateData" prefHeight="58.0" prefWidth="221.0" styleClass="basicButton" text="GetWeatherData" />
        <Label fx:id="datatypeLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="451.0" layoutY="32.0" prefHeight="70.0" prefWidth="381.0" styleClass="basicHeadingLightBlue" />
 
-       <AnchorPane fx:id="temperaturePane" layoutX="3.0" layoutY="62.0" prefHeight="450.0" prefWidth="823.0">
+       <AnchorPane fx:id="temperaturePane" layoutX="3.0" layoutY="62.0" prefHeight="523.0" prefWidth="823.0">
            <Label fx:id="weatherLabel" layoutX="43.0" layoutY="29.0" styleClass="basicText" text="WEATHER " />
            <Label fx:id="cityLabel" layoutX="171.0" layoutY="29.0" prefHeight="35.0" prefWidth="139.0" styleClass="basicText" text="City" />
            <Label fx:id="dateLabel" layoutX="325.0" layoutY="29.0" prefHeight="35.0" prefWidth="498.0" styleClass="basicText" />
            <Label fx:id="nowLabel" layoutX="54.0" layoutY="74.0" onMouseClicked="#onNowClick" prefHeight="47.0" prefWidth="101.0" styleClass="basicHeading" text="NOW" />
-         <Label fx:id="minlabel" layoutX="521.0" layoutY="460.0" prefHeight="17.0" prefWidth="100.0" text="minlabel" />
            <Label fx:id="tomorrowLabel" layoutX="183.0" layoutY="74.0" onMouseClicked="#onTomorrowClick" prefHeight="47.0" prefWidth="212.0" styleClass="basicHeading" text="TOMORROW" />
            <Label fx:id="dATomorrowLabel" layoutX="420.0" layoutY="74.0" onMouseClicked="#onDATomorrowClick" prefHeight="47.0" prefWidth="381.0" styleClass="basicHeading" text="DAY AFTER TOMORROW" />
-           <Button fx:id="avgTempButton" layoutX="98.0" layoutY="397.0" mnemonicParsing="false" onAction="#onAvgBtnClick" styleClass="basicButton" text="AVERAGE TEMP" />
-           <Button fx:id="minMaxTempButton" layoutX="521.0" layoutY="400.0" mnemonicParsing="false" onAction="#onMinMaxBtnClick" styleClass="basicButton" text="MIN-MAX TEMP" />
-            <Label fx:id="tempMinLabel" layoutX="51.0" layoutY="137.0" prefHeight="35.0" prefWidth="103.0" text="Temperature min" />
-            <Label fx:id="tempMaxLabel" layoutX="51.0" layoutY="223.0" prefHeight="47.0" prefWidth="90.0" text="Temperature max" />
-            <Label fx:id="tempRightNowLabel" layoutX="51.0" layoutY="189.0" prefHeight="35.0" prefWidth="103.0" text="temprightnow" />
-         <Label fx:id="maxlabel" layoutX="521.0" layoutY="490.0" prefHeight="17.0" prefWidth="100.0" text="maxlabel" />
-         <DatePicker fx:id="chooseDay" layoutX="300.0" layoutY="400.0" onAction="#saveDate" promptText="chooseDay" />
-         <Label fx:id="avglabel" layoutX="98.0" layoutY="490.0" prefHeight="17.0" prefWidth="113.0" text="avglabel" />
+           <Button fx:id="avgTempButton" layoutX="426.0" layoutY="364.0" mnemonicParsing="false" onAction="#onAvgBtnClick" styleClass="basicButton" text="AVERAGE TEMP" />
+            <Label fx:id="tempMinLabel" layoutX="70.0" layoutY="262.0" prefHeight="47.0" prefWidth="68.0" styleClass="basicHeadingWhite" text="Alin" />
+            <Label fx:id="tempMaxLabel" layoutX="67.0" layoutY="224.0" prefHeight="47.0" prefWidth="113.0" styleClass="basicHeadingWhite" text="Ylin" />
+            <Label fx:id="tempRightNowLabel" layoutX="70.0" layoutY="159.0" prefHeight="47.0" prefWidth="68.0" styleClass="basicHeadingWhite" text="Nyt" />
+         <Label layoutX="39.0" layoutY="355.0" styleClass="smallHeading" text="Calculate values from given date" />
+         <DatePicker fx:id="chooseDay" layoutX="136.0" layoutY="457.0" onAction="#saveDate" />
+         <Label layoutX="161.0" layoutY="415.0" styleClass="basicTextWhite" text="Select date" />
+         <Label fx:id="avglabel" layoutX="688.0" layoutY="381.0" prefHeight="17.0" prefWidth="113.0" styleClass="smallText" text="avglabel" />
+         <Label fx:id="minlabel" layoutX="688.0" layoutY="444.0" prefHeight="17.0" prefWidth="100.0" styleClass="smallText" text="minlabel" />
+         <Label fx:id="maxlabel" layoutX="688.0" layoutY="470.0" prefHeight="17.0" prefWidth="100.0" styleClass="smallText" text="maxlabel" />
+           <Button fx:id="minMaxTempButton" layoutX="426.0" layoutY="444.0" mnemonicParsing="false" onAction="#onMinMaxBtnClick" styleClass="basicButton" text="MIN-MAX TEMP" />
+         <Label fx:id="tempMinLabel1" layoutX="574.0" layoutY="262.0" prefHeight="47.0" prefWidth="68.0" styleClass="basicHeadingWhite" text="Alin" />
+         <Label fx:id="tempMinLabel2" layoutX="276.0" layoutY="262.0" prefHeight="47.0" prefWidth="68.0" styleClass="basicHeadingWhite" text="Alin" />
+         <Label fx:id="tempMaxLabel1" layoutX="276.0" layoutY="215.0" prefHeight="47.0" prefWidth="113.0" styleClass="basicHeadingWhite" text="Ylin" />
+         <Label fx:id="tempMaxLabel2" layoutX="574.0" layoutY="214.0" prefHeight="47.0" prefWidth="113.0" styleClass="basicHeadingWhite" text="Ylin" />
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1f93ff00" height="266.0" layoutX="24.0" layoutY="64.0" stroke="#78e2a2" strokeType="INSIDE" width="778.0" />
        </AnchorPane>
        <AnchorPane fx:id="windPane" layoutX="3.0" layoutY="62.0" prefHeight="450.0" prefWidth="823.0">
            <Label fx:id="windLabel" layoutX="43.0" layoutY="493.0" prefHeight="58.0" prefWidth="138.0" styleClass="valueText" />
@@ -59,7 +72,6 @@
                     <NumberAxis side="LEFT" />
                 </yAxis>
             </LineChart>
-
        </AnchorPane>
    </children>
 </AnchorPane>
