--- a/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/roadwatch.fxml
+++ b/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/roadwatch.fxml
@@ -31,7 +31,7 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </opaqueInsets>
             </ButtonBar>
-            <Label alignment="CENTER_RIGHT" contentDisplay="TOP" maxHeight="35.0" maxWidth="452.0" prefHeight="35.0" prefWidth="452.0" styleClass="basicText" text="X Traffic messages" textAlignment="RIGHT" GridPane.columnIndex="2" />
+            <Label fx:id="trafficMessageCount" alignment="CENTER_RIGHT" contentDisplay="TOP" maxHeight="35.0" maxWidth="452.0" prefHeight="35.0" prefWidth="452.0" styleClass="basicText" text="X Traffic messages" textAlignment="RIGHT" GridPane.columnIndex="2" />
          </children>
          <opaqueInsets>
             <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
