--- a/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/stylesheet.css
+++ b/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/stylesheet.css
@@ -103,7 +103,7 @@
 .basicHeadingLightBlue {
     -fx-font-family: "Ubuntu";
     -fx-font-size: 32px;
-    -fx-text-fill: #487AD9;
+    -fx-text-fill: #78C2E2;
     -fx-font-weight: bold;
 }
 
